# yadg

./: .buildinfo  .gitattributes  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  VERSION  __init__.py  devdocs.html  dg2json.py  dg2png.py  features.html  genindex.html  index.html  modules.html  object.datagram.html  object.schema.html  objects.html  objects.inv  paper.bib  paper.md  parsers.basiccsv.html  parsers.chromtrace.html  parsers.dummy.html  parsers.electrochem.html  parsers.flowdata.html  parsers.html  parsers.masstrace.html  parsers.meascsv.html  parsers.qftrace.html  parsers.xpstrace.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  usage.html  version.3_1.html  version.4_0.html  (+16 more)
.doctrees/: devdocs.doctree  environment.pickle  features.doctree  index.doctree  modules.doctree  object.datagram.doctree  object.schema.doctree  objects.doctree  parsers.basiccsv.doctree  parsers.chromtrace.doctree  parsers.doctree  parsers.dummy.doctree  parsers.electrochem.doctree  parsers.flowdata.doctree  parsers.masstrace.doctree  parsers.meascsv.doctree  parsers.qftrace.doctree  usage.doctree  version.3_1.doctree  version.4_0.doctree  version.doctree  yadg.core.doctree  yadg.dgutils.doctree  yadg.doctree  yadg.parsers.chromtrace.doctree  yadg.parsers.doctree  yadg.parsers.electrochem.doctree  yadg.parsers.flowdata.doctree  yadg.parsers.masstrace.doctree  yadg.parsers.qftrace.doctree
4.0.0/: .buildinfo  devdocs.html  features.html  genindex.html  index.html  modules.html  object.datagram.html  object.schema.html  objects.html  objects.inv  parsers.basiccsv.html  parsers.chromtrace.html  parsers.dummy.html  parsers.electrochem.html  parsers.flowdata.html  parsers.html  parsers.masstrace.html  parsers.meascsv.html  parsers.qftrace.html  parsers.xpstrace.html  py-modindex.html  search.html  usage.html  version.3_1.html  version.4_0.html  version.html  yadg.core.html  yadg.dgutils.html  yadg.html  yadg.parsers.chromtrace.html  yadg.parsers.electrochem.html  yadg.parsers.flowdata.html  yadg.parsers.html  yadg.parsers.masstrace.html  yadg.parsers.qftrace.html  yadg.parsers.xpstrace.html
4.0.1/: .buildinfo  devdocs.html  features.html  genindex.html  index.html  modules.html  object.datagram.html  object.schema.html  objects.html  objects.inv  parsers.basiccsv.html  parsers.chromtrace.html  parsers.dummy.html  parsers.electrochem.html  parsers.flowdata.html  parsers.html  parsers.masstrace.html  parsers.meascsv.html  parsers.qftrace.html  parsers.xpstrace.html  py-modindex.html  search.html  usage.html  version.3_1.html  version.4_0.html  version.html  yadg.core.html  yadg.dgutils.html  yadg.html  yadg.parsers.chromtrace.html  yadg.parsers.electrochem.html  yadg.parsers.flowdata.html  yadg.parsers.html  yadg.parsers.masstrace.html  yadg.parsers.qftrace.html  yadg.parsers.xpstrace.html
4.1/: .buildinfo  citing.html  devdocs.html  features.html  genindex.html  index.html  object.datagram.html  object.dataschema.html  objects.html  objects.inv  parsers.html  py-modindex.html  search.html  usage.html  version.3_1.html  version.4_0.html  version.4_1.html  version.html  yadg.core.html  yadg.dgutils.html  yadg.html  yadg.parsers.basiccsv.html  yadg.parsers.chromtrace.html  yadg.parsers.dummy.html  yadg.parsers.electrochem.html  yadg.parsers.flowdata.html  yadg.parsers.html  yadg.parsers.masstrace.html  yadg.parsers.meascsv.html  (+3 more)
(+2135 files in other folders)
